MDEV-36188 assert with vector index and very long PK

limit PK length if the table has a vector index